--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
                             Phim mới cập nhật <i class="fa-regular fa-star"></i>
                         </a>
                         <div class="grid gap-3 grid-cols-2 sm:grid-cols-3 md:grid-cols-4 xl:grid-cols-5 mt-3
-                            content-center text-white text-base md:text-lg">
+                            content-center text-white text-base">
                             <a class="relative rounded-md overflow-hidden hover:text-shadow-main hover:text-[#0ff]"
                                 href="javascript:void(0)">
                                 <img src="public/img/bia/1.jpg" alt="" class="w-full h-full">
@@ -1697,6 +1697,31 @@
                 </div>
             </div>
         </main>
+
+        <footer>
+            <div class="bg-[#232323] h-auto mt-4">
+                <div class="max-w-7xl mx-auto h-full p-2 flex">
+                    <div class="basis-1/3 md:basis-1/5 lg:basis-2/12 mr-2">
+                        <img src="public/img/logo.png" alt="Kanime" class="w-full h-auto">
+                    </div>
+                    <div class="basis-2/3 md:basis-4/5 lg:basis-10/12">
+                        <span class="hidden md:block text-xs text-white text-left">
+                            Nội dung của trang web được tổng hợp từ nhiều nguồn khác nhau trên Internet. Nếu quyền lợi
+                            của bạn bị vi phạm, vui lòng thông báo cho tôi còn xóa hay không thì tôi không biết =))
+                        </span>
+                        <small class="text-xs text-slate-500 basis-2/3 text-center w-full inline-block">
+                            &copy; Copyright 2022, Kanime
+                        </small>
+                    </div>
+                    <!-- <div class="flex-row basis-2/3">
+                        <span class="">
+                            Nội dung của trang web được tổng hợp từ nhiều nguồn khác nhau trên Internet. Nếu quyền lợi
+                            của bạn bị vi phạm, vui lòng thông báo cho tôi còn xóa hay không thì tôi không biết =))
+                        </span>
+                    </div> -->
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="public/js/devtoolscheck.js"></script>
@@ -1732,8 +1757,6 @@
                     contain.scrollLeft -= size;
                 }
             }
-
-            console.log(scrolled);
         }
 
         function showNavItem(ele) {
